--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <canvas id="canvas1"></canvas>
-    <img src="animation/enemy_worm.png" id="worm">
-    <img src="animation/enemy_ghost.png" id="ghost">
-    <img src="animation/enemy_spider.png" id="spider">
+    <img src="enemy_worm.png" id="worm">
+    <img src="enemy_ghost.png" id="ghost">
+    <img src="enemy_spider.png" id="spider">
 </body>
 <script src="5.js"></script>
 </html>
